--- a/seeds/projectData.json
+++ b/seeds/projectData.json
@@ -1,17 +1,23 @@
 [
   {
-    "name": "Music Near Me",
-    "description": "A mobile app that will send you notifications whenever a concert is playing in your area.",
-    "needed_funding": 5000
+    "category": "Plumbing",
+    "issue": "How to fix a leaky faucet",
+    "instructions": "Strap some tape around it"
+
   },
   {
-    "name": "The Ultimate Tech Quiz",
-    "description": "A web app that will give users 10 new technical questions each day and track their progress in things like programming, cybersecurity, database architecture, and more!",
-    "needed_funding": 10000
+    "category": "Plumbing",
+    "issue": "How to unclog a shower drain",
+    "instructions": "Pull the hair out"
   },
   {
-    "name": "Roll 'Em Up",
-    "description": "A game for Windows and macOS where players move a ball through a series of increasingly challenging mazes.",
-    "needed_funding": 800
+    "category": "Plumbing",
+    "issue": "How to seal a cracked pipe",
+    "instructions": "Super Glue!"
+  },
+  {
+    "category": "Plumbing",
+    "issue": "How to stop the roof from leaking",
+    "instructions": "Buy a new roof"
   }
 ]
